# Excel

./: data_engine.py
Excel/: .gitignore  README.md  dataengine_pro.py  demo.py  pyproject.toml
Excel/backend/: app.py
Excel/data_engine/: __init__.py  config.py  database.py  display.py  helpers.py  operations.py  session.py
Excel/data_engine/operations/: __init__.py  analysis.py  filter.py  find_replace.py  join.py  pivot.py  ranking.py  session_io.py  smart_fix.py  table_manager.py  transform.py  view.py
Excel/excelpy/: cli.py  core.py  engine.py  helpers.py
Excel/integration/: __init__.py  adapter.py  column_resolver.py  inspect_core.py
Excel/shared/: __init__.py
Excel/shared/backend/: app.py
Excel/shared/excelpy/: __init__.py  core.py  sql_engine.py
Excel/shared/integration/: inspect_core.py  session.py
Excel/streamlit_app/: __init__.py  app_config.py  app_data_ops.py  app_join.py  app_sql.py  app_state.py  app_ui.py  app_views.py  engine.py  streamlit_app.py
Excel/tests/: __init__.py  test_data.csv  test_excelpy.py  test_integration.py
Excel/ui/web/: app_data_ops.py  app_database.py  app_join.py  app_sql.py  app_state.py  app_ui.py  app_views.py  engine.py  streamlit_app.py
data_engine/: config.py  display.py  helpers.py  operations.py  session.py
