[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excelpy"
version = "1.0.0"
description = "Interactive CLI and library for treating CSV/DB tables like Excel"
readme = "README.md"
authors = [
    { name = "excelpy team", email = "team@excelpy.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["excel", "csv", "database", "data", "cli", "interactive"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
excelpy = "excelpy.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["excelpy*"]

[tool.setuptools.package-data]
excelpy = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
